examples/apps/djapp/4_create_initial_mesh_components/metal_and_jazz_placeholder_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: jazz
  labels:
    app: jazz
spec:
  ports:
  - port: 9080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: metal
  labels:
    app: metal
spec:
  ports:
  - port: 9080
    name: http
